--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@apollo/client": "^3.8.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.6.0",
     "next": "14.0.4",
+    "next-intl": "^3.5.2",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -19,9 +21,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.33",
     "sass": "^1.69.7",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
