--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.321.0",
     "next": "14.0.4",
     "next-intl": "^3.5.2",
+    "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
