--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-input-mask": "^2.0.4",
+    "react-phone-input-2": "^2.15.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.0"
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
