--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "google-libphonenumber": "^3.2.34",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.321.0",
     "next": "14.0.4",
     "next-intl": "^3.5.2",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/google-libphonenumber": "^7.4.30",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
