--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.0.5",
     "google-libphonenumber": "^3.2.34",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.321.0",
-    "next": "14.0.4",
+    "next": "^14.2.3",
     "next-intl": "^3.5.2",
     "query-string": "^8.2.0",
     "react": "^18",
