Image slider was recreated using Swiper

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.51.2",
     "react-input-mask": "^2.0.4",
     "react-phone-input-2": "^2.15.1",
+    "react-slick": "^0.30.2",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -45,6 +46,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.5",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
