--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.51.2",
     "react-input-mask": "^2.0.4",
     "react-phone-input-2": "^2.15.1",
+    "sonner": "^1.5.0",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
