--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.0.5",
     "google-libphonenumber": "^3.2.34",
+    "jwt-decode": "^4.0.0",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.321.0",
     "next": "^14.2.3",
