--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.6.0",
-    "@headlessui/react": "^2.1.2",
+    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -22,6 +22,7 @@
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.0.5",
     "google-libphonenumber": "^3.2.34",
+    "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.321.0",
